--- a/src/services/ImgPrcDataVisu.css
+++ b/src/services/ImgPrcDataVisu.css
@@ -38,7 +38,7 @@
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
-    padding: 0px;
+    padding-top: 30px;
     height: 80vh;
     width:60vw;
     /* justify-content:center; */
@@ -46,6 +46,7 @@
 
 .intensity-table-container{
     align-self: center;
+    border-top:50px;
     
 }
 
