--- a/src/services/ImageAnalyser.css
+++ b/src/services/ImageAnalyser.css
@@ -39,4 +39,26 @@
     align-items: center;
     flex-direction: row;
     justify-content: center;
+    padding: 20px;
+    margin:10px 0px 20px 0px;
+    border-style: solid;
+    border-radius: 20px;
+}
+
+.input-base-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    
+}
+.drag-drop-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 10px;
+  border-style: dashed;
+  border-radius: 20px;
 }
